RESOLVED FIXED280971
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/align-content-horiz-001a.html
https://bugs.webkit.org/show_bug.cgi?id=280971
Summary [FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/align-content-horiz...
alan
Reported 2024-10-07 06:10:43 PDT
ssia
Attachments
[fast-cq]Patch (1.55 KB, patch)
2024-10-07 06:15 PDT, alan
no flags
alan
Comment 1 2024-10-07 06:15:02 PDT
Created attachment 472840 [details] [fast-cq]Patch
EWS
Comment 2 2024-10-07 07:42:28 PDT
Committed 284761@main (5a666ae791b3): <https://commits.webkit.org/284761@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 472840 [details].
Radar WebKit Bug Importer
Comment 3 2024-10-07 07:43:16 PDT
Note You need to log in before you can comment on or make changes to this bug.