[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/align-content-horiz-001a.html https://bugs.webkit.org/show_bug.cgi?id=280971

Reviewed by Antti Koivisto.

Fix a copy-paste mistake (see space-around above).

* LayoutTests/imported/w3c/web-platform-tests/css/css-flexbox/flex-lines/multi-line-wrap-reverse-row-reverse.html:
* Source/WebCore/layout/formattingContexts/flex/FlexLayout.cpp:
(WebCore::Layout::FlexLayout::handleCrossAxisAlignmentForFlexLines const):

Canonical link: https://commits.webkit.org/284761@main